Created a readme and edited the notebook

--- a/index.ipynb
+++ b/index.ipynb
@@ -5,7 +5,7 @@
    "id": "b3e3c7e7",
    "metadata": {},
    "source": [
-    "# Dropped Connection Prediction using 5G network data"
+    "# Dropped Connection Prediction using network data"
    ]
   },
   {
@@ -15,7 +15,7 @@
    "source": [
     "## Introduction\n",
     "\n",
-    "The goal of this machine learning project was to predict dropped mobile connections in 5G networks. A lost connection, which occurs when a call or data session is abruptly ended, can degrade user experience and reveal deeper problems with network performance. Reducing these occurrences is essential for telecommunication companies to maintain high QoS(Quality of Service) and customer satisfaction.\n",
+    "The goal of this machine learning project was to predict dropped mobile connections in networks. A lost connection, which occurs when a call or data session is abruptly ended, can degrade user experience and reveal deeper problems with network performance. Reducing these occurrences is essential for telecommunication companies to maintain high QoS(Quality of Service) and customer satisfaction.\n",
     "\n",
     " This notebook leverages a variety of network and device-level variables to create a predictive model by utilizing machine learning techniques. Network operators can take prompt remedial measures like load balancing, signal boosting, or client rerouting by precisely predicting the chance of a lost connection.\n",
     "\n",
